--- a/FrontEnd/2.html_basic(1).html
+++ b/FrontEnd/2.html_basic(1).html
@@ -9,7 +9,7 @@
             } */
         </style>
     </head>
-    <body style="background-color: gray;">
+    <body>
         <h2>글자 styling 예제</h2>
         <!-- 인라인 스타일링 -->
         <p style="background-color: red;">1. 배경색 변경</p>
@@ -31,5 +31,43 @@
         <a href="https://www.naver.com">
             <img src="https://velog.velcdn.com/images/jogn97/post/4564dc43-99c8-41b2-b341-85728a7d9803/image.gif" alt="이미지가 존재하지 않습니다." >
         </a>
+
+        <h2>리스트 예제</h2>
+        <!-- 리스트 대표태그 : ul (unordered), ol (ordered) -->
+        <ul style="list-style-type: square;">
+            <li>첫번째 아이템</li>
+            <li>두번째 아이템</li>
+            <li>세번째 아이템</li>
+        </ul>
+        <ol style="list-style-type: upper-roman;">
+            <li>아이템 A</li>
+            <li>아이템 B</li>
+            <li>아이템 C</li>
+        </ol>
+
+        <h2>테이블 예제</h2>
+        <table border="1" style="border-collapse: collapse;">
+            <caption>테이블 명</caption>
+            <thead>
+                <tr>
+                    <th>제목 1</th>
+                    <th>제목 2</th>
+                </tr>  
+            </thead> 
+            <tbody>
+                <tr>
+                    <td>내용1</td>
+                    <td>내용2</td>
+                </tr>  
+                <tr>
+                    <td>내용A</td>
+                    <td>내용B</td>
+                </tr>   
+                <tr>
+                    <td>내용10</td>
+                    <td>내용20</td>
+                </tr>  
+            </tbody>
+        </table>
     </body>
 </html>
